fixed spacing fonts

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 .container {
     text-align: center;
     background-image: linear-gradient(to right, #004C54, #F74902, #E81828, #006BB6);
+    opacity: .98;
     padding: 3%;
     border-color: rgba(243, 242, 239, 0.938);
     border-style: solid;
@@ -83,8 +84,10 @@ body {
 
 #main-game-section {
     color: rgba(243, 242, 239, 0.938);
-    font-family: 'Bebas Neue', cursive;
+    font-family: 'Fredoka One', cursive;
+    /* font-family: 'Bebas Neue', cursive; */
     font-size: 23px;
+    letter-spacing: 2px;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
@@ -98,4 +101,17 @@ body {
     font-family: 'Bungee Inline', cursive;
     font-size: 25px;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+.question {
+    opacity: 1;
+}
+.answer-choices {
+    opacity: 1;
+}
+#timer-counter {
+    opacity: 1;
+}
+#current-question {
+    opacity: 1;
 }
